fix: move truncated to tooltip directive

--- a/projects/ui/src/styles/base.scss
+++ b/projects/ui/src/styles/base.scss
@@ -95,7 +95,7 @@ body[data-bspk] {
 }
 
 [data-truncated] {
-    max-width: inherit;
+    max-width: 100%;
     display: inline-block;
     overflow: hidden;
     text-overflow: ellipsis;
